Update to latest upstream release

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "org.osgi.foundation-1.2.0-project.tar.gz:"	170e9a5ee1e4ca5f53eb11a102207bc8b8f6da14
+  org.osgi.foundation-1.2.0-project.tar.gz: 170e9a5ee1e4ca5f53eb11a102207bc8b8f6da14
